# exomind-cell

./: .gitignore  CELL_RESULTS.md  CITATION.cff  Cargo.toml  LICENSE  README-zh.md  README.md  RESULTS.md  cell_ctrl_137.csv  cell_exp_137.csv  competition_food_10.csv  competition_food_100.csv  competition_food_100_genomes.txt  competition_food_10_genomes.txt  competition_food_20.csv  competition_food_20_genomes.txt  competition_food_30.csv  competition_food_30_genomes.txt  competition_food_40.csv  competition_food_40_genomes.txt  competition_food_50.csv  competition_food_50_genomes.txt  competition_food_75.csv  competition_food_75_genomes.txt  control_group.csv  control_seed_137.csv  control_seed_137_genomes.txt  control_seed_2026.csv  control_seed_2026_genomes.txt  control_seed_256.csv  control_seed_256_genomes.txt  control_seed_42.csv  control_seed_42_genomes.txt  control_seed_999.csv  control_seed_999_genomes.txt  experimental_group.csv  experimental_seed_137.csv  experimental_seed_137_genomes.txt  experimental_seed_2026.csv  experimental_seed_2026_genomes.txt  (+18 more)
data/: cell50_ctrl_137.csv  cell50_ctrl_2026.csv  cell50_ctrl_256.csv  cell50_ctrl_42.csv  cell50_ctrl_999.csv  cell50_exp_137.csv  cell50_exp_2026.csv  cell50_exp_256.csv  cell50_exp_42.csv  cell50_exp_999.csv  cellR1_exp.csv  cellR2_exp.csv  cellR3_ctrl.csv  cellR3_exp.csv  cellR5_exp.csv  cellR8_exp.csv  cell_cem_10.csv  cell_cem_20.csv  cell_cem_5.csv  cell_ctrl_256.csv  cell_ctrl_42.csv  cell_data_ctrl.csv  cell_data_exp.csv  cell_exp_256.csv  cell_growth_ctrl.csv  cell_growth_exp.csv  cell_multifood_exp.csv  (+101 more)
(+136 files in other folders)
