[package]
name = "exomind-cell"
version = "0.1.0"
edition = "2021"
description = "ExoMind Cell - Operational Closure virtual machine for Cognitive Life Science"
authors = ["ExoMind Team"]
license = "CCOPL-1.0"
repository = "https://github.com/exomind-team/exomind-cell"
readme = "README.md"

[dependencies]
rand = "0.8"
rayon = "1.10"
ratatui = "0.29"
crossterm = "0.28"
eframe = { version = "0.31.0", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"] }
